Added more information to the home info

--- a/home.html
+++ b/home.html
@@ -11,8 +11,11 @@
   <body>
 
     <div class="homeinfo">
-      <h1>Creative Adventure Lab</h1>
-      <h1>Monday-Friday 11am-6pm and Saturday-Sunday 10am-4pm.</h1>
+      <h1>CREATIVE ADVENTURE LAB</h1>
+      <h2>MISSION & VISION</h2>
+      <h3>Creative Adventure Lab is a 501(c)3 non-profit organization that's moving the world forward by helping people of all ages discover, strengthen, and apply creative thinking and innovation skills.</h3>
+      <h2>VISITOR HOURS</h2>
+      <h3>Monday-Friday 11am-6pm and Saturday-Sunday 10am-4pm. Hours sometimes change on holidays. <a href="creativeadventurelab.org/visitor-info">View details</a></h3>
     </div>
 
     <div class="hometabs">
